Fix SonarCloud issues and add comprehensive tests
- Add constants for duplicate literals (USER_NOT_FOUND_MSG, ROLE_*, STATUS_*)
- Replace generic wildcard types with ResponseEntity<Object>
- Replace System.out with SLF4J logger in AdminDataLoader
- Move admin password to application.properties configuration
- Add AdminServiceTest with 25 unit tests
- Add AdminControllerTest with 15 unit tests
- Add AdminDataLoaderTest with 3 unit tests
- Add AdminDtoTest with 4 unit tests for DTOs
- Total test coverage now at 87.9%